--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 		<title>Document</title>
 	</head>
 	<body>
+		<!-- https://1drv.ms/p/s!AkvGRQ9l4xaAhuI7EUi_vMFczO51IA?e=Y5uUKU - Read Only link -->
+		<!-- https://1drv.ms/p/s!AkvGRQ9l4xaAhuI7qykH7Ce83SJNcg?e=8yZrn4 - Can edit -->
 		<iframe
-			src="https://1drv.ms/p/s!AkvGRQ9l4xaAhuI7EUi_vMFczO51IA?e=Y5uUKU"
+			src="https://1drv.ms/p/s!AkvGRQ9l4xaAhuI7qykH7Ce83SJNcg?e=8yZrn4"
 			width="100%"
 			height="600px"
 			frameborder="0">
